# flask-base

./: .gitignore  README.md  app.py  pyproject.toml
backend_server/: __init__.py  extensions.py
backend_server/common/: __init__.py  global_vars.py  response.py
backend_server/models/: common.py  user.py
backend_server/v1/: __init__.py  config.py
backend_server/v1/account/: __init__.py  controller.py  dto.py  service.py  utils.py
backend_server/v1/auth/: __init__.py  controller.py  dto.py  service.py  utils.py
backend_server/v1/common/: __init__.py  dto.py  exception.py  jwt_handle.py  utils.py
backend_server/v1/user/: __init__.py  controller.py  dto.py  service.py  utils.py
config/: dev.cfg  gunicorn.py
docker/redis/: docker-compose.yml
